assets/components/admintools/css/mgr/themes/purple.css
/* ... */
.purple-theme #modx-navbar ul.modx-subnav li a {
	background-color: #3c2644;
	color: #d7d7d7;
}
.purple-theme #modx-navbar ul.modx-subnav li a span {
	color: #C2B0BE;
}
.purple-theme #modx-navbar ul.modx-subnav li a:hover {
	background-color: #4a1d50;
}
.purple-theme #modx-navbar ul.modx-subnav li a:hover span {
	color: #c3aec0;
}
.purple-theme #modx-topnav li {
	border-right: 1px solid #503758;
}
.purple-theme #modx-navbar .top:after {
	font-family: FontAwesome;
	color: #f0e2ec;
	border: none;
	right: 15px;
	top: 21px;
	content: "";
}
.purple-theme #modx-navbar ul.modx-subnav ul.modx-subsubnav {
	border: 1px solid #826585;
}
.purple-theme #modx-navbar ul.modx-subnav .has-subnav:after {
	border: none;
	color: #f0e2ec;
	content: "";
	font-family: FontAwesome;
	position: absolute;
	right: 10px;
	top: 40%;
}
.purple-theme .x-menu-list li.x-menu-item-active {
	background-color: #7D4685;
}
/*breadrumbs*/
.purple-theme .crumb_wrapper .crumbs li:hover {
	background-color: #7D4685;
}
.purple-theme .crumb_wrapper .crumbs li:hover span:before,
.purple-theme .crumb_wrapper .crumbs li:hover button:before {
	background-color: #7D4685;
}
.purple-theme .crumb_wrapper .crumbs li:hover button,
.purple-theme .crumb_wrapper .crumbs li:hover span,
.purple-theme .crumb_wrapper .crumbs li:hover span:after {
	background-color: #7d4685;
	color: #ffffff;
}
.purple-theme .crumb_wrapper .crumbs li:hover span:after,
.purple-theme .crumb_wrapper .crumbs li:hover button:after {
	border-color: #fbfbfb #fbfbfb #7d4685 #7d4685;
}
.purple-theme .crumb_wrapper .crumbs li:hover + li span::before,
.purple-theme .crumb_wrapper .crumbs li:hover + li button::before {
	border-left-color: #7d4685;
}
/*tree*/
.purple-theme #modx-leftbar {background-color: #342033 !important;}
.purple-theme #modx-leftbar-tabpanel .x-tab-panel-body-noborder,
.purple-theme #modx-leftbar-tabpanel .x-tree .x-panel-body {
	background-color: #342033;
	border-radius: 0;
}
/*collapse button*/
.purple-theme #modx-leftbar-tabs-xsplit .x-layout-mini-east {left: -2px;}
.purple-theme #modx-leftbar-tabs-xcollapsed .x-layout-mini,
.purple-theme #modx-leftbar-tabs-xsplit .x-layout-mini {
	top: 43px !important;
}
/*.purple-theme #modx-leftbar-tabs-xsplit .x-layout-mini:after,
.purple-theme #modx-leftbar-tabs-xcollapsed .x-layout-mini:after {
	border-right: 5px solid #781278;
}*/
.purple-theme .x-layout-split-west .x-layout-mini:hover:after,
.purple-theme .x-layout-collapsed-east .x-layout-mini:hover:after {
	border-right-color: #cd36ae !important;
}
.purple-theme .x-layout-split-east .x-layout-mini:hover:after,
.purple-theme .x-layout-collapsed-west .x-layout-mini:hover:after {
	border-left-color: #cd36ae !important;
}
/*tabs*/
.purple-theme #modx-leftbar .x-tab-panel-header {background: #342033 !important;}
.purple-theme #modx-leftbar-tabpanel .x-tab-strip li {color: #a0a0a0;}
.purple-theme #modx-leftbar-tabpanel .x-tab-strip li:hover {color: #dfdfdf;}

.purple-theme #modx-leftbar-tabpanel .x-tab-strip li.x-tab-strip-active {
	background-color: #4A364A ;
	box-shadow: 0 -5px 0 #b23aba, -1px 0 0 transparent, 0 1px 2px #555, 0 0 7px #151515;
	color: #fff;
}
.purple-theme #modx-leftbar-tabpanel .x-tab-strip li.x-tab-strip-active::before {background: transparent;}
/*toolbar*/
.purple-theme #modx-leftbar-tabpanel > .x-tab-panel-bwrap > .x-tab-panel-body {border-radius: 0;}
.purple-theme #modx-leftbar-tabpanel .x-toolbar-cell .x-btn-noicon,
.purple-theme #modx-leftbar .x-toolbar-ct .x-toolbar-right #emptifier.x-btn {
	background-color: transparent;
	color: #FFF !important;
	margin-right: 10px;
	opacity: 0.6;
}
.purple-theme #modx-leftbar .x-toolbar-ct .x-toolbar-right #emptifier.x-btn {
	margin-right: 20px;
}
.purple-theme #modx-leftbar .x-toolbar-ct .x-toolbar-right #emptifier.x-item-disabled {
	opacity: 0.3;
}
.purple-theme #modx-leftbar-tabpanel .x-toolbar-cell .x-btn-noicon:hover,
.purple-theme #modx-leftbar .x-toolbar-ct .x-toolbar-right #emptifier.x-btn:not(.x-item-disabled):hover {
	opacity: 0.9;
}
.purple-theme #modx-resource-tree-tbar,
.purple-theme #modx-tree-element .x-panel-tbar {
	background: #4A364A   !important;
}
.purple-theme #modx-resource-tree-tbar .x-toolbar-left .x-btn:first-child,
.purple-theme #modx-tree-element .x-toolbar-left .x-btn:first-child {
	margin-left: 5px !important;
}
/*tree nodes*/
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-node-el,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-node-el span,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-node-el .icon {
	background-color: #342033;
	color: #d7d7d7;
}
/*selected node*/
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-selected,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-selected span,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-selected .icon {
	background-color: #432d42;
}
/*hovered node*/
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-node-el.x-tree-node-over,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-node-el.x-tree-node-over span,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .x-tree-node-el.x-tree-node-over .icon {
	background-color: #442f44;
}
.purple-theme #modx-leftbar-tabpanel .x-tree-arrows .x-tree-elbow-plus:hover,
.purple-theme #modx-leftbar-tabpanel .x-tree-arrows .x-tree-elbow-minus:hover {
	background-color: #a440ab;
}
/*hidden in menu*/
.purple-theme #modx-leftbar-tabpanel .x-tree-node .hidemenu,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .hidemenu span,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .hidemenu .icon {
	color: #d7d7d7 !important;
	opacity: 0.7;
	font-style: normal;
}
/*unpublished*/
.purple-theme #modx-leftbar-tabpanel .x-tree-node .unpublished ,
.purple-theme #modx-leftbar-tabpanel .x-tree-node .unpublished  span {
	font-style: italic;
}
/* ... */

